--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -1,7 +1,7 @@
 @incollection{fiorella2022,
   author    = {Fiorella, Logan and Mayer, Richard E.},
   title     = {The Generative Activity Principle in Multimedia Learning},
-  booktitle = {The Cambridge Handbook of Multimedia Learning},
+  booktitle = {The {C}ambridge Handbook of Multimedia Learning},
   editor    = {Mayer, Richard E. and Fiorella, Logan},
   edition   = {3},
   publisher = {Cambridge University Press},
