--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -45,7 +45,7 @@
   langid       = {japanese},
   yomi         = {suzuki, ichiro}
 }
-@InCollection{takeda2012_cge,
+@InCollectionja{takeda2012_cge,
   author       = {武田, 史郎},
   title        = {応用一般均衡モデルによる地球温暖化対策の分析：有用性と問題点},
   editor       = {有村, 俊秀 and 蓬田, 守弘 and 川瀬, 剛志},
