feat: Add new bibliography entries, refine `biblatex` APA formatting for multilingual editor names and titles, and update appendix content and TOC styling.

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -57,3 +57,27 @@
   langid       = {japanese},
   yomi         = {takeda, shiro}
 }
+
+@article{knuth1984,
+  author  = {Knuth, Donald E.},
+  title   = {Literate Programming},
+  journal = {The Computer Journal},
+  year    = {1984},
+  volume  = {27},
+  number  = {2},
+  pages   = {97--111},
+  doi     = {10.1093/comjnl/27.2.97}
+}
+
+% --- INPROCEEDINGS (Conference Paper) ---
+% Used for: Papers presented at conferences and published in proceedings.
+% Key fields: booktitle (name of conference), series, pages.
+@inproceedings{vaswani2017,
+  author    = {Vaswani, Ashish and Shazeer, Noam and Parmar, Niki and Uszkoreit, Jakob and Jones, Llion and Gomez, Aidan N. and Kaiser, {\L}ukasz and Polosukhin, Illia},
+  title     = {Attention Is All You Need},
+  booktitle = {Advances in Neural Information Processing Systems},
+  series    = {NIPS '17},
+  year      = {2017},
+  pages     = {5998--6008},
+  publisher = {Curran Associates, Inc.}
+}
