--- a/ClassicThesis.tex
+++ b/ClassicThesis.tex
@@ -170,9 +170,9 @@
     \setlength{\cftpartnumwidth}{2em}
 
     % Chapter (Serif, Large)
-    \renewcommand{\cftchapfont}{\rmfamily\Large}
-    \renewcommand{\cftchappagefont}{\rmfamily\Large}
-    \renewcommand{\cftchappresnum}{\rmfamily\Large}
+    \renewcommand{\cftchapfont}{\rmfamily\normalsize}
+    \renewcommand{\cftchappagefont}{\rmfamily\normalsize}
+    \renewcommand{\cftchappresnum}{\rmfamily\normalsize}
     \renewcommand{\cftchapaftersnumb}{}
     \setlength{\cftbeforechapskip}{0.66\baselineskip}
 
