--- a/classicthesis.sty
+++ b/classicthesis.sty
@@ -425,7 +425,7 @@
   \g@addto@macro\appendix{%
     \titleformat{\chapter}[display]%
     {\relax}
-    {\raggedright\myChapterFont {\small Appendix}\,{\color{CTsemi}\Large\raisebox{-0.15ex}{\myChapterNumberFont\thechapter}}}
+    {\raggedright\myChapterFont {\small 付録}\,{\color{CTsemi}\Large\raisebox{-0.15ex}{\myChapterNumberFont\thechapter}}}
     {0.2pc}
     {\raggedright\myChapterFont\Large}[\normalsize\vspace*{.8\baselineskip}\titlerule]%
   }
