--- a/FrontBackmatter/Acknowledgments.tex
+++ b/FrontBackmatter/Acknowledgments.tex
@@ -11,7 +11,7 @@
 \let\clearpage\relax
 \let\cleardoublepage\relax
 \let\cleardoublepage\relax
-\chapter*{Acknowledgments}
+\chapter*{謝辞}
 
 Put your acknowledgments here.
 
