--- a/FrontBackmatter/Publications.tex
+++ b/FrontBackmatter/Publications.tex
@@ -2,7 +2,7 @@
 % Publications
 %*******************************************************
 \pdfbookmark[1]{Publications}{publications}
-\chapter*{Publications}
+\chapter*{業績}
 
 \section*{学術論文}
 \subsection*{査読付き}
