--- a/FrontBackmatter/Titlepage.tex
+++ b/FrontBackmatter/Titlepage.tex
@@ -15,10 +15,10 @@
 
         
         \begingroup
-            \color{CTtitle}\spacedallcaps{\myTitle} \\ \bigskip
+            \color{CTtitle}{\myTitle} \\ \bigskip
         \endgroup
 
-        \spacedlowsmallcaps{\myName}
+        {\myName}
 
         \vspace{2cm}
 
