--- a/FrontBackmatter/Titleback.tex
+++ b/FrontBackmatter/Titleback.tex
@@ -4,7 +4,7 @@
 
 \vfill
 
-\noindent\myName: \textit{\myTitle,} %\mySubtitle, 
+\noindent\myName: {\myTitle,} %\mySubtitle, 
 %\myDegree,
 \textcopyright\ \myTime
 
