refactor: Remove small caps and spacing from headers and marks, and update head font family.

--- a/FrontBackmatter/Bibliography.tex
+++ b/FrontBackmatter/Bibliography.tex
@@ -7,7 +7,7 @@
 \defbibheading{bibintoc}[\bibname]{%
   \phantomsection
   \manualmark
-  \markboth{\spacedlowsmallcaps{#1}}{\spacedlowsmallcaps{#1}}%
+  \markboth{#1}{#1}%
   \addtocontents{toc}{\protect\vspace{\beforebibskip}}%
   \addcontentsline{toc}{chapter}{#1}%
   % \addcontentsline{toc}{chapter}{\tocEntry{#1}}%
