--- a/classicthesis.sty
+++ b/classicthesis.sty
@@ -375,15 +375,15 @@
     \RequirePackage{scrlayer-scrpage} % provides headers and footers (KOMA Script)
      \clearpairofpagestyles
     %\setheadsepline{0pt}
-    \let\MakeMarkcase\spacedlowsmallcaps
+    \renewcommand{\MakeMarkcase}[1]{#1}
     \ifthenelse{\boolean{ct@nochapters}}%
         {\relax}%
-        {\renewcommand{\chaptermark}[1]{\markboth{\spacedlowsmallcaps{#1}}{\spacedlowsmallcaps{#1}}}}
-    \renewcommand{\sectionmark}[1]{\markright{\textsc{\thesection}\enspace\spacedlowsmallcaps{#1}}}
+        {\renewcommand{\chaptermark}[1]{\markboth{#1}{#1}}}
+    \renewcommand{\sectionmark}[1]{\markright{\thesection\enspace #1}}
     \lehead{\mbox{\llap{\small\pagemark\kern2em}\headmark\hfil}}
     \rohead{\mbox{\hfil{\headmark}\rlap{\small\kern2em\pagemark}}}
     \ofoot[\small\pagemark]{}% only for plain.scrheadings page style (first page of a chapter)
-    \renewcommand{\headfont}{\small}
+    \renewcommand{\headfont}{\small\rmfamily}
 %    \DeclareRobustCommand{\fixBothHeadlines}[2]{} % <--- ToDo
     % hack to get the content headlines right (thanks, Lorenzo!)
         \def\toc@heading{%
