feat: Adjust document margins, correct bibliography page range format, add new LaTeX packages, and configure line and title spacing.

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -51,7 +51,7 @@
   editor       = {有村, 俊秀 and 蓬田, 守弘 and 川瀬, 剛志},
   booktitle    = {地球温暖化対策と国際貿易：排出量取引と国境調整措置をめぐる経済学的・法学的分析},
   chapter      = 1,
-  pages        = {15-36},
+  pages        = {15--36},
   publisher    = {東京大学出版会},
   year         = 2012,
   langid       = {japanese},
