--- a/part1.bib
+++ b/part1.bib
@@ -5,7 +5,7 @@
   journal      = {日本科学会誌},
   volume       = {10},
   number       = {1},
-  pages        = {10-25},
+  pages        = {10--25},
   year         = {2025},
   doi          = {10.1000/dummy.doi.123},
   langid       = {japanese},
