--- a/part2.bib
+++ b/part2.bib
@@ -3,7 +3,7 @@
   title        = {東工大パワー丼における水菜と豚肉の配分},
   author       = {加藤, 太郎 and 佐藤, 二郎 and 佐藤, 三郎},
   booktitle    = {東工大学食学会第50回全国大会講演論文集},
-  pages        = {100-102},
+  pages        = {100--102},
   year         = {2023},
   month        = aug,
   langid       = {japanese},
